# MSCC-API

./: README.md  pyproject.toml  setup.py
aimlsse_api/: ground_data_access.py  satellite_data_access.py
aimlsse_api/client/: __init__.py  ground_data_client.py  satellite_data_client.py  web_client.py
aimlsse_api/data/: __init__.py  metar.py  status.py
aimlsse_api/interface/: __init__.py  ground_data_access.py  satellite_data_access.py
