[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aimlsse_api"
version = "0.3.10"
description = "The API of the project: AI-ML based support for satellite exploration"
dependencies = [
    "geopandas>=0.12.2",
    "requests>=2.28.1"
]