[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aimlsse_api"
version = "0.3.16"
description = "The API of the project: AI-ML based support for satellite exploration"
dependencies = [
    "dacite>=1.6.0",
    "fastapi>=0.88.0",
    "geopandas>=0.12.2",
    "pandas>=1.5.2",
    "requests>=2.28.1",
    "shapely>=2.0.0"
]